tests/snapshots/protocols__serialize__tests__illegal_fork_prot.snap
---
source: src/serialize.rs
expression: content
snapshot_kind: text
---
warning: Inferring step value to be 1.
   ┌─ tests/illegal_fork.prot:11:3
   │
11 │   step();
   │   ^^^^^^^ Inferring step value to be 1.

error: Fork command should have no arguments.
   ┌─ tests/illegal_fork.prot:12:3
   │
12 │   fork(1);
   │   ^^^^ Fork command should have no arguments.
